@@ -1,3 +1,8 @@
+2008-07-19  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-prepare-xfer-dialog.cc:
+	Fix for upload problem
+
 2008-07-18  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-con-dialog.cc:
@@ -50,7 +55,7 @@
 2008-07-13  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/libgviewer/viewer-window.cc:
-	Fix for intviewer menu entry 
+	Fix for intviewer menu entry
 
 2008-07-10  Padraig O'Briain  <Padraig.Obriain@Sun.COM>
 
